[gd_scene load_steps=13 format=3 uid="uid://cnt3pxxxplchd"]

[ext_resource type="Script" uid="uid://c2rbfch3phmq5" path="res://locations/classroom 1/window.gd" id="1_enfeo"]
[ext_resource type="Material" uid="uid://d0370ysb0kbcx" path="res://locations/weather/rain_effect.tres" id="2_dpth4"]
[ext_resource type="Shader" uid="uid://b0olpc3sqxwy4" path="res://locations/weather/fog.gdshader" id="3_05v4q"]
[ext_resource type="Texture2D" uid="uid://b1ehgqk72cba8" path="res://locations/classroom 1/window frame.png" id="4_ura6b"]
[ext_resource type="Texture2D" uid="uid://dohookq752ddx" path="res://locations/classroom 1/window glass.png" id="5_voy2g"]

[sub_resource type="Gradient" id="Gradient_x8vso"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.08627451, 0.050980393, 0.31764707, 0.19607843)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n6y4y"]
gradient = SubResource("Gradient_x8vso")

[sub_resource type="Gradient" id="Gradient_8ags5"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.92941177, 0.6862745, 0.52156866, 0.78431374)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_51rpm"]
gradient = SubResource("Gradient_8ags5")

[sub_resource type="Gradient" id="Gradient_f4e0e"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.77254903, 0.8666667, 0.8235294, 0.19607843)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mxb0c"]
gradient = SubResource("Gradient_f4e0e")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m30d0"]
shader = ExtResource("3_05v4q")
shader_parameter/color = Color(0.7, 0.65, 1, 1)
shader_parameter/alpha_multiplier = 0.4
shader_parameter/cloud_scale = 6.0
shader_parameter/softness = 0.6
shader_parameter/OCTAVES = 5
shader_parameter/speed = 0.5
shader_parameter/drift_x = 0.30000010925
shader_parameter/drift_y = -0.2
shader_parameter/swirl_amount = 1.730000082175
shader_parameter/morph_speed = 2.0

[node name="WindowWithLight" type="Node2D"]
script = ExtResource("1_enfeo")

[node name="NightColor" type="Sprite2D" parent="."]
position = Vector2(-1.66893e-05, -4.7683716e-07)
scale = Vector2(6.5312495, 3.90625)
texture = SubResource("GradientTexture2D_n6y4y")

[node name="MorningColor" type="Sprite2D" parent="."]
position = Vector2(-1.66893e-05, -4.7683716e-07)
scale = Vector2(6.5312495, 3.90625)
texture = SubResource("GradientTexture2D_51rpm")

[node name="NoonColor" type="Sprite2D" parent="."]
position = Vector2(-1.66893e-05, -4.7683716e-07)
scale = Vector2(6.5312495, 3.90625)
texture = SubResource("GradientTexture2D_mxb0c")

[node name="Rain" type="GPUParticles2D" parent="."]
visible = false
amount = 400
lifetime = 0.4
process_material = ExtResource("2_dpth4")

[node name="Fog" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_m30d0")
offset_left = -202.0
offset_top = -117.0
offset_right = 202.0
offset_bottom = 117.0

[node name="WindowFrame" type="Sprite2D" parent="."]
texture = ExtResource("4_ura6b")

[node name="WindowGlass" type="Sprite2D" parent="."]
modulate = Color(0.8117647, 0.8117647, 0.8117647, 0.5882353)
texture = ExtResource("5_voy2g")
